--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "check:code": "concurrently \"yarn:check:script\" \"yarn:check:format\""
+    "check:code": "concurrently \"yarn:check:script\" \"yarn:check:format\"",
+    "check:script": "eslint \"**/*.ts\"",
+    "check:format": "prettier --check \"**/*.ts\" --ignore-path .eslintignore"
+  },
+  "lint-staged": {
+    "*.{js,ts}": "eslint"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -65,7 +70,9 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "concurrently": "^8.2.1",
     "eslint": "^8.42.0",
+    "lint-staged": "^13.0.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
@@ -77,6 +84,9 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4"
+  },
+  "resolutions": {
+    "wrap-ansi": "^7.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
