--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,13 +21,13 @@
       "@/*": ["./src/*"],
       "@libs-common/repositories": ["./libs/common/repositories"],
       "@libs-common/dtos": ["./libs/common/dtos"],
-      "@libs-common/functions": ["./libs/common/functions"],
+      "@libs-common/responses": ["./libs/common/responses"],
+      "@libs-common/helpers": ["./libs/common/helpers"],
+      "@libs-common/enums": ["./libs/common/enums"],
       "@libs-common/constants": ["./libs/common/constants"],
       "@libs-core/validators": ["./libs/core/validators"],
-      "@libs-core/decorators": ["./libscore//decorators"],
+      "@libs-core/decorators": ["./libs/core/decorators"],
       "@libs/configs": ["./libs/configs"],
-
-
     }
   }
 }
