--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "prisma": {
-    "seed": "ts-node src/database/seed.ts",
-    "schema": "src/database/schema.prisma"
+    "seed": "ts-node libs/database/seed.ts",
+    "schema": "libs/database/schema.prisma"
   },
   "engines": {
     "node": ">=20",
@@ -43,7 +43,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.1",
     "@nestjs/swagger": "^7.4.0",
+    "@nestjs/websockets": "^10.4.1",
     "@prisma/client": "^5.19.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -72,10 +74,10 @@
     "@typescript-eslint/parser": "^6.0.0",
     "concurrently": "^8.2.1",
     "eslint": "^8.42.0",
-    "lint-staged": "^13.0.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "lint-staged": "^13.0.3",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
