--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ MYSQL_ROOT_PASSWORD=
 DATABASE_URL=
 
 #JWT
-JWT_SECRET=
+JWT_SECRET=abcefghijklmnopqrstuvwxyz
 
 #LIMIT_PER_PAGE
 LIMIT_PER_PAGE=15
