--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,24 +3,23 @@ version: '3.8'
 name: qualgo
 
 services:
-  # api:
-  #   container_name: api
-  #   build:
-  #     dockerfile: Dockerfile
-  #     context: .
-  #   volumes:
-  #     - .:/usr/src/app
-  #     - /usr/src/app/node_modules
-  #   env_file:
-  #   - .env
-  #   # Run a command against the development stage of the image
-  #   command: yarn start:dev
-  #   ports:
-  #     - 3000:3000
-  #   links:
-  #       - database
-  #   depends_on:
-  #       - database  
+  api:
+    container_name: api
+    build:
+      dockerfile: Dockerfile
+      context: .
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    env_file:
+    - .env
+    command: yarn start:dev
+    ports:
+      - 3000:3000
+    links:
+        - database
+    depends_on:
+        - database  
   database:
       container_name: db
       image: mysql:8.0
