--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,10 @@ services:
       - 3000:3000
     links:
         - database
+        - redis
     depends_on:
         - database  
+        - redis
   database:
       container_name: db
       image: mysql:8.0
@@ -33,5 +35,18 @@ services:
       volumes:
         - mysql:/var/lib/mysql
 
+  redis:
+      container_name: redis
+      image: redis:latest
+      ports:
+        - "${REDIS_PORT}:6379"
+      command: redis-server --requirepass ${REDIS_PASSWORD}
+      volumes:
+        - redis:/data
+      restart: unless-stopped
+      environment:
+        REDIS_PASSWORD: ${REDIS_PASSWORD}
+
 volumes:
-  mysql:        
+  mysql:   
+  redis:     
