--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-#MYSQL
+###MYSQL
 MYSQL_VERSION=8
 MYSQL_PORT=3306
 
@@ -9,8 +9,14 @@ MYSQL_ROOT_PASSWORD=
 
 DATABASE_URL=
 
-#JWT
+#### REDIS
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=redis
+
+###JWT
 JWT_SECRET=abcefghijklmnopqrstuvwxyz
 
-#LIMIT_PER_PAGE
+###LIMIT_PER_PAGE
 LIMIT_PER_PAGE=15
+
